fix Mailjet issue when displayName contains double quotes